<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="MissingTranslation">LibraryManager</string>
    <string name="notifyTitle" tools:ignore="MissingTranslation">提示</string>
    <string name="notifyMsg" tools:ignore="MissingTranslation">当前应用缺少必要权限。\n\n请点击\"设置\"-\"权限\"-打开所需权限。</string>
    <string name="setting" tools:ignore="MissingTranslation">设置</string>
    <string name="cancel" tools:ignore="MissingTranslation">取消</string>
    <string name="permission_deny" tools:ignore="MissingTranslation">未获得必要权限，无法使用</string>
    <string name="login_now" tools:ignore="MissingTranslation">登录</string>
    <string name="register" tools:ignore="MissingTranslation">注册</string>
    <string name="next" tools:ignore="MissingTranslation">接下来</string>
    <string name="login" tools:ignore="MissingTranslation">登录</string>
    <string name="nick" tools:ignore="MissingTranslation">用户名</string>
    <string name="empty_nick" tools:ignore="MissingTranslation">输入用户名</string>
    <string name="error_email" tools:ignore="MissingTranslation">输入正确邮箱</string>
    <string name="short_pwd" tools:ignore="MissingTranslation">密码需六位以上</string>
    <string name="username_registered" tools:ignore="MissingTranslation">该用户名已被注册</string>
    <string name="register_fail" tools:ignore="MissingTranslation">注册失败</string>
    <string name="empty_nick_or_email" tools:ignore="MissingTranslation">输入用户名或邮箱</string>
    <string name="empty_pwd" tools:ignore="MissingTranslation">输入密码</string>
    <string name="username_not_register" tools:ignore="MissingTranslation">邮箱或用户名不存在</string>
    <string name="error_pwd" tools:ignore="MissingTranslation">密码错误</string>
    <string name="login_succ" tools:ignore="MissingTranslation">登录成功</string>
    <string name="register_succ" tools:ignore="MissingTranslation">注册成功</string>
    <string name="login_fail" tools:ignore="MissingTranslation">登录失败</string>
    <string name="pwd" tools:ignore="MissingTranslation">密码</string>
    <string name="email" tools:ignore="MissingTranslation">邮箱</string>
    <string name="loading" tools:ignore="MissingTranslation">加载中...</string>
    <string name="Error" tools:ignore="MissingTranslation">出错</string>
    <string name="check" tools:ignore="MissingTranslation">检查网络连接</string>
    <string name="back" tools:ignore="MissingTranslation">返回</string>
    <string name="empty_email" tools:ignore="MissingTranslation">邮箱为空</string>
    <string name="error" tools:ignore="MissingTranslation">出错</string>
</resources>
